testdata/EtaX/EtaX.meth1/EtaX.meth1.03.check
// src:   val t5d = meth1
// 2.13-base error
target/testdata/EtaX/EtaX.meth1.03.scala:13: error: missing argument list for method meth1 in class TestBase
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `meth1 _` or `meth1(_)` instead of `meth1`.
  val t5d = meth1
            ^
1 error

// 2.13-head error <no change>
// 2.13-new  ok
// 3.0-old   ok    <no change>
// 3.0       ok    <no change>
// 3.1-migr  ok    <no change>
// 3.1       ok    <no change>

error error ok    ok    ok    ok    ok
